# ai-reader

./: .env  .gitignore  Cargo.toml  README.md  openapi.json
migrations/: 01_book_server_init.sql  20250225072756_init.sql
src/: ai_utils.rs  api.rs  book.rs  config.rs  error.rs  functions.rs  lib.rs  llm_fn.rs  main.rs  server.rs  student.rs  teacher.rs  utils.rs
src/api/: manager.rs  public.rs  user.rs
src/book/: book.rs  chapter.rs  library.rs  tools.rs
src/books/: book.rs  chapter.rs  library.rs  tools.rs
src/functions/: book_info.rs  get_book_info.rs
src/teacher/: messages.rs
src/teacher/messages/: progress.rs  tools.rs
