[package]
name = "book-server"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1.6", features = ["anyhow"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
poem-openapi = { version = "5", features = ["swagger-ui"] }
dashmap = "6"
crossbeam = "0.8.4"
anyhow = "1.0.96"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["macros", "local-offset", "serde"] }
clap = { version = "4.5.24", features = ["derive"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.2"
tracing-appender = "0.2.3"
pulldown-cmark = "0.13.0"
mdbook = "0.4.45"
regex = "1.11.1"
toml = "0.8.20"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "time"] }
epub2mdbook = "0.15.0"
dotenvy = "0.15.0"
walkdir = "2.5.0"
tree-iter = "0.6.0"
schemars = "0.8.22"
async-openai = "0.28.0"
futures = "0.3.31"
parking_lot = "0.12.3"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
