[package]
name = "book-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6"
crossbeam = "0.8.4"
anyhow = "1.0.96"
thiserror = "2.0.12"
time = { version = "0.3.37", features = ["macros", "local-offset", "serde"] }
clap = { version = "4.5.24", features = ["derive"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "time"] }
tracing-appender = "0.2.3"
pulldown-cmark = "0.13.0"
mdbook = "0.4.45"
regex = "1.11.1"
toml = "0.8.20"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "time"] }
epub2mdbook = "0.15.0"
dotenvy = "0.15.0"
walkdir = "2.5.0"
tree-iter = "0.6.0"
schemars = "0.8.22"
async-openai = "0.28.0"
futures = "0.3.31"
parking_lot = "0.12.3"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
fs_extra = "1.3.0"
argon2 = "0.5.3"
tempfile = "3.19.1"
utoipa = { version = "5.3.1", features = ["actix_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web"] }
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
actix-files = "0.6.2"
actix-cors = "0.7.0"
rand = "0.9.1"
tracing-actix-web = "0.7.18"
rustls = "0.23.26"
futures-util = "0.3.31"
actix-session = { version = "0.10.1", features = ["redis-session"] }
moka = { version = "0.12.10", features = ["future"] }
async-stream = "0.3"
actix-web-lab = "0.24.1"
mime = "0.3.17"
actix-multipart = "0.7.2"
zip = "2.6.1"
