[package]
name = "ai-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6"
crossbeam = "0.8.4"
anyhow = "1.0"
thiserror = "2.0.12"
time = { version = "0.3", features = ["macros", "local-offset", "serde"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.2", features = ["env-filter", "time"] }
tracing-appender = "0.2.3"
pulldown-cmark = "0.13.0"
mdbook = "0.4"
regex = "1.11.1"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
epub2mdbook = "0.15.0"
dotenvy = "0.15.0"
walkdir = "2.5.0"
tree-iter = "0.6.0"
schemars = "0.8.22"
async-openai = { git = "https://github.com/cyborg42/async-openai.git" }
futures = "0.3.31"
parking_lot = "0.12.3"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
fs_extra = "1.3.0"
argon2 = "0.5.3"
tempfile = "3.19.1"
utoipa = { version = "5.3.1", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
axum = { version = "0.8", features = ["macros", "multipart", "ws", "http2"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "compression-br",
    "timeout",
] }
redis = { version = "0.30", features = ["tokio-comp"] }
tower-cookies = "0.11"
axum-extra = { version = "0.10", features = ["typed-header"] }
moka = { version = "0.12.10", features = ["future"] }
async-stream = "0.3"
mime = "0.3.17"
zip = "2.6.1"
rustls = "0.23.26"
tokio-rustls = "0.26"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-sessions = "0.14.0"
tower-sessions-moka-store = "*"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tokio-stream = "0.1.17"
futures-util = "0.3.31"
rand = "0.9.1"
